--- a/html-css-task/style.css
+++ b/html-css-task/style.css
@@ -88,8 +88,8 @@ header>.container{
     margin-left: 183px;
 }
 .card{
-    max-width: 382px;
-    width: 100%;
+    /* max-width: 382px; */
+    width: 39%;
     height: 170px;
     padding: 40px 30px;
     margin: 0 0 25px 25px;
@@ -98,10 +98,11 @@ header>.container{
     border-radius: 5px;
 }
 .card>.card__image{
-    width: auto;
+    width: 20%;
     height: 60px;
 }
 .card>.text{
+    width: 80%;
     margin-left: 20px;
 }
 
