--- a/html-css-task/style.css
+++ b/html-css-task/style.css
@@ -48,9 +48,20 @@ header>.container{
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-right: 15px;
 }
 .menu__items{
     margin-left: 50px;
+}
+.burger{
+    display: none;
+
+}
+.burger__bar{
+    width: 19px;
+    height: 3px;
+    background: #191e1e;
+    margin: 0 0 3px;
 }
 .description__block{
     padding: 80px 0 65px;
@@ -156,3 +167,38 @@ li a, .dropbtn {
   .dropdown:hover .dropdown-content {
     display: block;
   }
+
+
+
+@media (max-width: 1000px){
+
+    .logo{
+        height: 30px;
+        width: auto;
+        margin-left: 10px;
+    }
+    .cards__block{
+        margin-left: 0;
+    }
+    .description__block{
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+}
+@media (max-width: 900px) {
+    .menu__list{
+        display: none;
+    }
+    .burger{
+        display: block;
+        padding: 10px;
+        margin-right: 15px;
+    }
+}
+
+@media (max-width: 800px){
+    .card{
+        width: 100%;
+        margin-right: 25px;
+    }
+}
