--- a/html-css-task/style.css
+++ b/html-css-task/style.css
@@ -80,13 +80,13 @@ header>.container{
     font-size: 28px;
     line-height: 50px;
 }
-.cards>.container{
+.block>.container{
     display: flex;
     /* justify-content: flex-end; */
     /* flex-direction: row; */
     flex-wrap: wrap;
 }
-.cards{
+.block{
     background-color: #ebf2f2;
     padding-top: 40px;
 }
@@ -96,7 +96,9 @@ header>.container{
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    margin-left: 183px;
+    padding-left: 183px;
+    padding-bottom: 80px;
+    border-bottom: 2px solid gray;
 }
 .card{
     /* max-width: 382px; */
@@ -167,8 +169,28 @@ li a, .dropbtn {
   .dropdown:hover .dropdown-content {
     display: block;
   }
-
-
+.container>.title{
+    margin-bottom: 100px;
+}
+.projects{
+    border-bottom: 1px solid lightgray;
+}
+.projects__block{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.project{
+    width: 48%;
+    margin-bottom: 30px;
+}
+.project__title{
+    color: rgb(14, 115, 197);
+    padding-bottom: 10px;
+}
+.project__text{
+    line-height: 25px;
+}
 
 @media (max-width: 1000px){
 
@@ -178,7 +200,7 @@ li a, .dropbtn {
         margin-left: 10px;
     }
     .cards__block{
-        margin-left: 0;
+        padding-left: 0;
     }
     .description__block{
         padding-left: 10px;
