--- a/html-css-task/style.css
+++ b/html-css-task/style.css
@@ -169,18 +169,17 @@ li a, .dropbtn {
   }
   
   .dropdown-content {
-    display: none;
+    /* display: none; */
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    /* z-index: 1; */
     border-radius: 5px;
     margin-top: 50px;
-    transition: all .4s ease-in; 
-    /* visibility: none; тут нада */
-
-
+    transition: all .2s ease-in; 
+    opacity: 0;
+    visibility: hidden; 
   }
   
   .dropdown-content a {
@@ -189,13 +188,14 @@ li a, .dropbtn {
     text-decoration: none;
     display: block;
     text-align: left;
-    opacity: 0;
+    /* opacity: 0; */
   }
   
   
   .menu__items:hover .dropdown-content {
-    display: block;
-
+    /* display: block; */
+    visibility: visible;
+    opacity: 1;
   }
   .menu__items:hover a{
     opacity: 1;
