--- a/html-css-task/style.css
+++ b/html-css-task/style.css
@@ -63,6 +63,9 @@ header>.container{
     display: none;
 
 }
+.x-mark{
+    display: none;
+}
 .burger__bar{
     width: 19px;
     height: 3px;
@@ -192,11 +195,7 @@ li a, .dropbtn {
   }
   
   
-  .menu__items:hover .dropdown-content {
-    /* display: block; */
-    visibility: visible;
-    opacity: 1;
-  }
+
   .menu__items:hover a{
     opacity: 1;
   }
@@ -343,6 +342,13 @@ svg{
     color: #4f5e5e7c;
     margin-bottom: 20px;
 }
+@media (min-width: 901px){
+    .menu__items:hover .dropdown-content {
+        /* display: block; */
+        visibility: visible;
+        opacity: 1;
+      }
+}
 @media (max-width: 1000px){
 
     .logo{
@@ -359,13 +365,116 @@ svg{
     }
 }
 @media (max-width: 900px) {
+
+    header{
+        position: fixed;
+        width: 100%;
+        background-color: white;
+    }
+
+    body.lock{
+        overflow: hidden;
+    }
+    /* .menu__items:first-child{
+        margin-top: 100px;
+    } */
+    .menu__items:last-child{
+        margin-bottom: 100px;
+    }
+    .dropdown-content{
+        /* opacity: 1;
+        visibility: visible; */
+
+        background-color: #191e1e;
+        box-shadow: none;
+        margin-top: 0px;
+        /* color: white; */
+        height: 0;
+        transition: all .7 ease-in;
+    }
+    .dropdown-content > a{
+        color: lightgray;
+        padding-left: 0;
+        font-size: 20px;
+    }
     .menu__list{
-        display: none;
+        /* display: none; */
+        top: -100%;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: #191e1e;
+        font-size: 30px;
+        display: flex;
+        flex-direction: column;
+        overflow: auto;
+        transition: top .3s ease-in;
+         /* margin-top: 100px; */
+        /* padding-bottom: 100px;  */
+    }
+    .menu__list.active{
+        top: 0;
+    }
+    .dropdown, .menu__items > a{
+        height: 30px;
+    }
+    .menu__items{
+        margin-left: 10px;
+        height: 70px;
+        width: 85%;
+        justify-content: center;
+        flex-direction: column;
+        /* align-items: center; */
+    }
+    .menu__items.active{
+        height: fit-content;
+    }
+    .menu__items.active .dropdown-content{
+        position: static;
+        opacity: 1;
+        visibility: visible;
+        height: fit-content;
+    }
+    .dropdown{
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        border-bottom: 1px solid white;
+        padding-bottom: 15px;
+    }
+    .menu__items, .menu__items> a{
+        color: white;
+    }
+    .menu__items > a{
+        border-bottom: 1px solid white;
+        padding-bottom: 15px;
+
+    }
+     .nav-arrow{
+        transform: rotate(45deg) translate(-5px,5px) scale(1);
+        -webkit-transform: rotate(45deg) translate(-5px,5px) scale(1);
+        transition: transform .2s ease-out;
+        border: solid #98afae;
+        border-width: 0 2px 2px 0;
+        display: inline-block;
+        padding: 5px;
+        margin-left: 5px;
+        display: block;
     }
     .burger{
         display: block;
         padding: 10px;
         margin-right: 15px;
+    }
+    .x-mark{
+        display: block;
+        color: white;
+        height: 25px;
+        width: 25px;
+        position: relative;
+        left: 46%;
+        top: 23px;
+        margin-bottom: 80px;
     }
 }
 
