--- a/html-css-task/style.css
+++ b/html-css-task/style.css
@@ -69,7 +69,9 @@ header>.container{
 
 }
 .x-mark{
-    display: none;
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
 }
 .burger__bar{
     width: 19px;
@@ -402,30 +404,9 @@ svg{
     body.lock{
         overflow: hidden;
     }
-    /* .menu__items:first-child{
-        margin-top: 100px;
-    } */
-    .menu__items:last-child{
-        margin-bottom: 100px;
-    }
-    .dropdown-content{
-        /* opacity: 1;
-        visibility: visible; */
-
-        background-color: #191e1e;
-        box-shadow: none;
-        margin-top: 0px;
-        /* color: white; */
-        height: 0;
-        transition: all .7 ease-in;
-    }
-    .dropdown-content > a{
-        color: lightgray;
-        padding-left: 0;
-        font-size: 20px;
-    }
     .menu__list{
-        /* display: none; */
+        /* padding: 40px; */
+        /* padding-top: 150px; */
         top: -100%;
         position: fixed;
         width: 100%;
@@ -434,15 +415,74 @@ svg{
         font-size: 30px;
         display: flex;
         flex-direction: column;
-        overflow: auto;
+        overflow-y: scroll;
         transition: top .3s ease-in;
-         /* margin-top: 100px; */
-        /* padding-bottom: 100px;  */
         z-index: 0;
+        gap: 25px;
+    }
+    .menu__items>a{
+        color: white;
+    }
+    .menu__items{
+        width: 90%;
+        color: white;
+        display: flex;
+        /* justify-content: flex-start; */
+        flex-direction: column; 
+        margin-left: 20px;
+        border-bottom: 1px solid lightgray;
+        height: fit-content;
+    }
+    .menu__items:first-child{
+        margin-top: 150px;
+    }
+    .menu__items:last-child{
+        margin-bottom: 150px;
+    }
+    .dropdown-content{
+        position: relative;
+        visibility: visible;
+        opacity: 1;
+        right: inherit;
+        margin-top: 0;
+        background-color: #191e1e;
+        transition: .3s linear ;
+        max-height: 0;
+        overflow: hidden;
+    }
+    .menu__items.active .dropdown-content{
+        max-height: fit-content;
+    }
+    .dropdown-content>a{
+        color: white
     }
     .menu__list.active{
         top: 0;
     }
+
+    /* .menu__items:first-child{
+        margin-top: 100px;
+    } */
+    /* .menu__items:last-child{
+        margin-bottom: 100px;
+    }
+    .dropdown-content{
+         opacity: 1;
+        visibility: visible; 
+
+        background-color: #191e1e;
+        box-shadow: none;
+        margin-top: 0px;
+        height: 0;
+        transition: all .7 ease-in;
+    }
+    .dropdown-content > a{
+        color: lightgray;
+        padding-left: 0;
+        font-size: 20px;
+    }
+
+
     .menu__list.active #search{
         display: none;
     }
@@ -455,8 +495,7 @@ svg{
         width: 85%;
         justify-content: center;
         flex-direction: column;
-        /* align-items: center; */
-    }
+     }
     .menu__items.active{
         height: fit-content;
     }
@@ -491,22 +530,25 @@ svg{
         padding: 5px;
         margin-left: 5px;
         display: block;
-    }
+    } */
     .burger{
         display: block;
         padding: 10px;
         margin-right: 15px;
     }
     .x-mark{
-        display: block;
         color: white;
         height: 25px;
         width: 25px;
-        position: relative;
-        left: 46%;
-        top: 23px;
+        left: 40%;
+        top: 39px;
         margin-bottom: 80px;
     }
+    .menu__list .active .x-mark{ 
+        visibility: visible;
+        opacity: 1;
+    }
+
 }
 
 @media (max-width: 800px){
