--- a/html-css-task/style.css
+++ b/html-css-task/style.css
@@ -70,8 +70,14 @@ header>.container{
 }
 .x-mark{
     position: absolute;
-    opacity: 0;
+    /* opacity: 0; */
     visibility: hidden;
+    color: white;
+    height: 25px;
+    width: 25px;
+    left: 94.2%;
+    top: 25px;
+    margin-bottom: 80px;
 }
 .burger__bar{
     width: 19px;
@@ -459,6 +465,16 @@ svg{
     .menu__list.active{
         top: 0;
     }
+    .burger{
+        display: block;
+        padding: 10px;
+        margin-right: 15px;
+    }
+    .x-mark.active{ 
+        visibility: visible;
+        /* opacity: 1; */
+    }
+
 
     /* .menu__items:first-child{
         margin-top: 100px;
@@ -531,23 +547,6 @@ svg{
         margin-left: 5px;
         display: block;
     } */
-    .burger{
-        display: block;
-        padding: 10px;
-        margin-right: 15px;
-    }
-    .x-mark{
-        color: white;
-        height: 25px;
-        width: 25px;
-        left: 40%;
-        top: 39px;
-        margin-bottom: 80px;
-    }
-    .menu__list .active .x-mark{ 
-        visibility: visible;
-        opacity: 1;
-    }
 
 }
 
