--- a/html-css-task/style.css
+++ b/html-css-task/style.css
@@ -392,7 +392,7 @@ svg{
         margin-left: 10px;
     }
     .cards__block{
-        padding-left: 0;
+        padding-left: 20px;
     }
     .description__block{
         padding-left: 10px;
