--- a/react-task/src/styles/Footer.css
+++ b/react-task/src/styles/Footer.css
@@ -34,9 +34,15 @@
     display: flex;
     flex-direction: row-reverse;
 }
+.bottom{
+    display: flex;
+}
 .bottom__title{
     display: flex;
     justify-content: space-between;
+}
+.social__block{
+    margin-top: 35px;
 }
 .cls-2{
     fill: #fff;
@@ -86,6 +92,9 @@ svg{
     margin-bottom: 20px;
     line-height: 1.5em;
 }
+.bottom__text>.logo{
+    margin-bottom: 25px;
+}
 
 
 @media (max-width: 900px) {
@@ -95,5 +104,20 @@ svg{
     footer{
         padding-left: 15px;
         padding-right: 15px;
+    }
+}
+
+@media (max-width: 800px){
+    .bottom{
+        flex-direction: column-reverse;
+    }
+    .bottom__text{
+        width: 100%;
+    }
+    .social__block{
+        max-width: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
     }
 }
